--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                             <a class="swiper_boxs gold_box" href="#">
                                 <div class="swiper_box_top">
                                     <div class="gold">
-                                        <img class="carusel_num_img" src="/img/category.png" alt="">
+                                        <img class="carusel_num_img" src="/img/category2.png" alt="">
                                         <span class="carusel_num">1</span>
                                     </div>
                                     <span class="additive_color additive_bgc_gray">
@@ -399,7 +399,7 @@
                             <a class="swiper_boxs silver_box" href="#">
                                 <div class="swiper_box_top">
                                     <div class="silver">
-                                        <img class="carusel_num_img" src="/img/category.png" alt="">
+                                        <img class="carusel_num_img" src="/img/category2.png" alt="">
                                         <span class="carusel_num">2</span>
                                     </div>
                                     <span class="additive_color additive_bgc_darkred">
@@ -419,7 +419,7 @@
                             <a class="swiper_boxs copper_box" href="#">
                                 <div class="swiper_box_top">
                                     <div class="copper">
-                                        <img class="carusel_num_img" src="/img/category.png" alt="">
+                                        <img class="carusel_num_img" src="/img/category2.png" alt="">
                                         <span class="carusel_num">3</span>
                                     </div>
                                     <span class="additive_color additive_bgc_red">
