상품정보 페이지 작업중

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="swiper-container swiper2">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide swiper2-slide">
-                            <a class="swiper_boxs" href="#">
+                            <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">1</span>
                                     <span class="calorie">
@@ -120,7 +120,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper2-slide">
-                            <a class="swiper_boxs" href="#">
+                            <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">2</span>
                                     <span class="calorie">
@@ -141,7 +141,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper2-slide">
-                            <a class="swiper_boxs" href="#">
+                            <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">3</span>
                                     <span class="calorie">
@@ -162,7 +162,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper2-slide">
-                            <a class="swiper_boxs" href="#">
+                            <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">4</span>
                                     <span class="calorie">
@@ -183,7 +183,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper2-slide">
-                            <a class="swiper_boxs" href="#">
+                            <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">5</span>
                                     <span class="calorie">
@@ -204,7 +204,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper2-slide">
-                            <a class="swiper_boxs" href="#">
+                            <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">6</span>
                                     <span class="calorie">
@@ -225,7 +225,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper2-slide">
-                            <a class="swiper_boxs" href="#">
+                            <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">7</span>
                                     <span class="calorie">
@@ -246,7 +246,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper2-slide">
-                            <a class="swiper_boxs" href="#">
+                            <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">8</span>
                                     <span class="calorie">
@@ -267,7 +267,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper2-slide">
-                            <a class="swiper_boxs" href="#">
+                            <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">9</span>
                                     <span class="calorie">
@@ -288,7 +288,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper2-slide">
-                            <a class="swiper_boxs" href="#">
+                            <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">10</span>
                                     <span class="calorie">
@@ -309,7 +309,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper2-slide" style="padding: 0px;">
-                            <!-- <a class="swiper_boxs" href="#">
+                            <!-- <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">11</span>
                                     <span class="calorie">
@@ -330,7 +330,7 @@
                             </a> -->
                         </div>
                         <div class="swiper-slide swiper2-slide" style="padding: 0px;">
-                            <!-- <a class="swiper_boxs" href="#">
+                            <!-- <a class="swiper_boxs" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <span class="carusel_num">12</span>
                                     <span class="calorie">
@@ -418,7 +418,7 @@
                 <div class="swiper-container swiper3">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide swiper3-slide">
-                            <a class="swiper_boxs gold_box" href="#">
+                            <a class="swiper_boxs gold_box" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <div class="gold">
                                         <img class="carusel_num_img" src="/img/category.png" alt="">
@@ -438,7 +438,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper3-slide">
-                            <a class="swiper_boxs silver_box" href="#">
+                            <a class="swiper_boxs silver_box" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <div class="silver">
                                         <img class="carusel_num_img" src="/img/category.png" alt="">
@@ -458,7 +458,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide swiper3-slide">
-                            <a class="swiper_boxs copper_box" href="#">
+                            <a class="swiper_boxs copper_box" href="/search_results.html">
                                 <div class="swiper_box_top">
                                     <div class="copper">
                                         <img class="carusel_num_img" src="/img/category.png" alt="">
@@ -480,7 +480,7 @@
                     </div>
                 </div>
                 <div class="view_all">
-                    <a class="view_all_link" href="#">
+                    <a class="view_all_link" href="/search_results.html">
                         <span class="view_all_text">전체보기</span>
                     </a>
                 </div>
