--- a/product_information.html
+++ b/product_information.html
@@ -43,6 +43,46 @@
                             </div>
                         </div>
                     </div>
+                    <div class="additive_box">
+                        <div class="additive">
+                            <p>식품첨가물 <span>7</span>개</p>
+                            <div class="color_box">
+                                <div>
+                                    <span class="additive_color additive_bgc_green select">
+                                        6
+                                    </span>
+                                    <span class="additive_text">안전해요</span>
+                                </div>
+                                <div class="careful">
+                                    <span class="additive_color additive_bgc_yellow">
+                                        0
+                                    </span>
+                                    <span class="additive_color additive_bgc_red">
+                                        0
+                                    </span>
+                                    <span class="additive_color additive_bgc_darkred">
+                                        0
+                                    </span>
+                                    <span class="demoSpan1"></span>
+                                    <span style="display: block;margin-top: 4px;" class="additive_text">
+                                        유의하세요
+                                    </span>
+                                </div>
+                                <div>
+                                    <span class="additive_color additive_bgc_gray select">
+                                        1
+                                    </span>
+                                    <span class="additive_text">성분미표기</span>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="target_age">
+                            <p>대상연령</p>
+                            <i class="fas fa-cat"></i>
+                            <span class="additive_text font_12">전연령</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
