--- a/product_information.html
+++ b/product_information.html
@@ -87,12 +87,146 @@
                     <div class="brand_story_img">
                         <img src="/img/brand_nlihome.jpg" alt="">
                     </div>
-                    <div class="btn">
+                    <div class="brand_story_btn">
                         <a class="view_all_link" href="#">
                             <i class="fa fa-angle-up" aria-hidden="true"></i>
                             <span class="ir_su text_pink2" style="display: none">펼치기</span>
                             <span class="ir_no text_pink2">접기</span>
                         </a>
+                    </div>
+                </div>
+                <div class="food_talk">
+                    <div class="title">
+                        <p>푸드톡</p>
+                        <span class="food_talk_link">11개 푸드톡 ></span>
+                    </div>
+                    <div class="best_comment clearfix">
+                        <div class="user_img_box clearfix">
+                            <span class="user_img">
+                                <img src="/sources/source/img/main_img/main_swiper4.jpg" alt="">
+                                <span>BEST</span>
+                            </span>
+                        </div>
+                        <div class="user_comment ellipsis">
+                            <p class="user_name">
+                                나도남매맘
+                            </p>
+                            <p class="species">30대/고양이</p>
+                            <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="recommended_products">
+                    <p class="title">고양이 주식 에밀리 추천 상품</p>
+                    <div class="swiper-container swiper4">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide swiper4-slide">
+                                <a class="swiper_boxs" href="#">
+                                    <div class="swiper_box_top">
+                                        <span class="additive_color additive_bgc_green">
+                                        </span>
+                                    </div>
+                                    <div class="top10_img">
+                                        <img src="/img/cat_img.jpg" alt="" />
+                                    </div>
+                                    <div class="carusel_menu">
+                                        <p class="carusel_title">페르시안 키튼</p>
+                                        <span class="carusel_maker">로얄캐닌</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide swiper4-slide">
+                                <a class="swiper_boxs" href="#">
+                                    <div class="swiper_box_top">
+                                        <span class="additive_color additive_bgc_green">
+                                        </span>
+                                    </div>
+                                    <div class="top10_img">
+                                        <img src="/img/cat_img.jpg" alt="" />
+                                    </div>
+                                    <div class="carusel_menu">
+                                        <p class="carusel_title">페르시안 키튼</p>
+                                        <span class="carusel_maker">로얄캐닌</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide swiper4-slide">
+                                <a class="swiper_boxs" href="#">
+                                    <div class="swiper_box_top">
+                                        <span class="additive_color additive_bgc_green">
+                                        </span>
+                                    </div>
+                                    <div class="top10_img">
+                                        <img src="/img/cat_img.jpg" alt="" />
+                                    </div>
+                                    <div class="carusel_menu">
+                                        <p class="carusel_title">페르시안 키튼</p>
+                                        <span class="carusel_maker">로얄캐닌</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide swiper4-slide">
+                                <a class="swiper_boxs" href="#">
+                                    <div class="swiper_box_top">
+                                        <span class="additive_color additive_bgc_green">
+                                        </span>
+                                    </div>
+                                    <div class="top10_img">
+                                        <img src="/img/cat_img.jpg" alt="" />
+                                    </div>
+                                    <div class="carusel_menu">
+                                        <p class="carusel_title">순살치킨너겟</p>
+                                        <span class="carusel_maker">로얄캐닌</span>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="request">
+                    <div class="amendment">
+                        <i class="fas fa-user-friends"></i>
+                        수정요청
+                    </div>
+                    <div class="alliance">
+                        <i class="far fa-building"></i>
+                        제휴문의
+                    </div>
+                </div>
+                <div class="food_additives">
+                    <p class="title"><i class="fab fa-hubspot"></i>식품첨가물</p>
+                    <div class="ingredient_box">
+                        <table class="flat-table flat-table-1">
+                            <thead>
+                                <th>성분</th>
+                                <th>용도</th>
+                                <th></th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="ingredient">
+                                        <div>
+                                            <span class="additive_color additive_bgc_green"></span>
+                                            <span>천연향미제</span>
+                                        </div>
+                                    </td>
+                                    <td class="Usage">향미증진제</td>
+                                    <td class="explanation">설명</td>
+                                </tr>
+                                <tr>
+                                    <td class="ingredient">
+                                        <div>
+                                            <span class="additive_color additive_bgc_gray"></span>
+                                            <span>천연향미제</span>
+                                        </div>
+                                    </td>
+                                    <td class="Usage">영양강화제</td>
+                                    <td class="explanation">설명</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <p style="letter-spacing: -2px;">*식품첨가물 정보는 상품에 표시된 순서대로 기재되어 있습니다.</p>
+                        <p style="letter-spacing: -2px;">*식품첨가물은 각 상품마다 함량과 배합방식에 따라 다르게 적용될 수 있습니다.</p>
                     </div>
                 </div>
             </div>
@@ -109,14 +243,11 @@
     </script>
     <script>
         //접기/펼치기
-        $(".btn").click(function (e) {
+        $(".brand_story_btn").click(function (e) {
             e.preventDefault();
             $(".brand_story_img").slideToggle();
-            $(".btn").toggleClass("open");
-            //var btn = $(".btn").find(">i").attr("class");
-            //alert(btn);
-
-            if ($(".btn").hasClass("open")) {
+            $(".brand_story_btn").toggleClass("open");
+            if ($(".brand_story_btn").hasClass("open")) {
                 //open이 있을 때
                 $(".view_all_link").find(">i").attr("class", "fa fa-angle-down");
                 $(".view_all_link").find(".ir_su").attr("style", "display:inline-block;");
@@ -126,6 +257,32 @@
                 $(".view_all_link").find(">i").attr("class", "fa fa-angle-up");
                 $(".view_all_link").find(".ir_no").attr("style", "display:inline-block;");
                 $(".view_all_link").find(".ir_su").attr("style", "display:none;");
+            }
+        });
+    </script>
+    <script>
+        var swiper = new Swiper(".swiper4", {
+            // slidesPerView: 3,
+            // spaceBetween: 30,
+            // init: false,
+            loopFillGroupWithBlank: true,
+            breakpoints: {
+                1024: {
+                    slidesPerView: 4,
+                    spaceBetween: 10
+                },
+                768: {
+                    slidesPerView: 3,
+                    spaceBetween: 10
+                },
+                640: {
+                    slidesPerView: 2.8,
+                    spaceBetween: 10
+                },
+                320: {
+                    slidesPerView: 2.8,
+                    spaceBetween: 10
+                }
             }
         });
     </script>
